[package]
name = "svy"
author = "qiyuor2"
about = "自用CLI工具"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"